Fix alignment for menu icon on navbar

--- a/css/main.css
+++ b/css/main.css
@@ -77,17 +77,18 @@ h6 {
 /* * Menu icon * */
 .menuIcon {
   position: absolute;
-  transform: translate(calc(35px + 1em), -12.5%);
-  right: calc((100vw / 12) + 37px);
-  top: calc((100vh / 12));
+  /* transform: translate(calc(35px + 1em), -12.5%); */
+  right: calc((100vw / 12));
+  top: calc((100vh / 12) - 8px);
   z-index: 99;
-  padding: 1em;
+  /* padding: 1em; */
   width: calc(35px + 2em);
   height: calc(20px + 2em);
 }
 
 .menuIcon span::before {
   position: absolute;
+  transform: translate(1em, 1em);
   content: ' ';
   height: 4px;
   width: 35px;
@@ -97,6 +98,7 @@ h6 {
 }
 .menuIcon span::after {
   position: absolute;
+  transform: translate(1em, 1em);
   margin-top: 12px;
   content: ' ';
   height: 4px;
